--- a/PROGRAMS/Program 2 - SSAO/src/verysimpleDoF.vcxproj
+++ b/PROGRAMS/Program 2 - SSAO/src/verysimpleDoF.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
     <ProjectGuid>{F184FBF9-CB70-477E-AF5C-E83C4987361D}</ProjectGuid>
-    <ProjectName>verysimpleDoF</ProjectName>
+    <ProjectName>SSAO</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -139,10 +139,12 @@
     <ClInclude Include="WindowManager.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\resources\frag_nolight.glsl" />
-    <None Include="..\resources\simple_frag.glsl" />
-    <None Include="..\resources\simple_vert.glsl" />
-    <None Include="..\resources\vert.glsl" />
+    <None Include="..\resources\blur_frag" />
+    <None Include="..\resources\blur_vert" />
+    <None Include="..\resources\geometry_frag.glsl" />
+    <None Include="..\resources\geometry_vert.glsl" />
+    <None Include="..\resources\ssao_frag.glsl" />
+    <None Include="..\resources\ssao_vert.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
