Finish up project 3

--- a/PROGRAMS/Program 3/src/sponzatemplate.vcxproj.filters
+++ b/PROGRAMS/Program 3/src/sponzatemplate.vcxproj.filters
@@ -52,5 +52,11 @@
     <None Include="..\resources\shadow_vert.glsl">
       <Filter>shader</Filter>
     </None>
+    <None Include="..\resources\compute.glsl">
+      <Filter>shader</Filter>
+    </None>
+    <None Include="..\resources\compute_blur.glsl">
+      <Filter>shader</Filter>
+    </None>
   </ItemGroup>
 </Project>
