--- a/PROGRAMS/Program 3/src/sponzatemplate.vcxproj
+++ b/PROGRAMS/Program 3/src/sponzatemplate.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
     <ProjectGuid>{F184FBF9-CB70-477E-AF5C-E83C4987361D}</ProjectGuid>
     <ProjectName>sponzatemplate</ProjectName>
   </PropertyGroup>
@@ -140,6 +140,8 @@
     <ClInclude Include="WindowManager.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\resources\compute.glsl" />
+    <None Include="..\resources\compute_blur.glsl" />
     <None Include="..\resources\frag_nolight.glsl" />
     <None Include="..\resources\shadow_frag.glsl" />
     <None Include="..\resources\shadow_vert.glsl" />
