--- a/PROGRAMS/Program 3 - Blur/src/sponzatemplate.vcxproj
+++ b/PROGRAMS/Program 3 - Blur/src/sponzatemplate.vcxproj
@@ -142,13 +142,13 @@
   <ItemGroup>
     <None Include="..\resources\compute.glsl" />
     <None Include="..\resources\compute_blur.glsl" />
+    <None Include="..\resources\compute_blur_second.glsl" />
     <None Include="..\resources\frag_nolight.glsl" />
     <None Include="..\resources\shadow_frag.glsl" />
     <None Include="..\resources\shadow_vert.glsl" />
     <None Include="..\resources\simple_frag.glsl" />
     <None Include="..\resources\simple_vert.glsl" />
     <None Include="..\resources\vert.glsl" />
-    <None Include="compute_blur_second.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
