--- a/FINAL_PROJECT/src/verysimpleDoF.vcxproj
+++ b/FINAL_PROJECT/src/verysimpleDoF.vcxproj
@@ -143,6 +143,8 @@
     <None Include="..\resources\deferred_vert.glsl" />
     <None Include="..\resources\mouse_frag.glsl" />
     <None Include="..\resources\mouse_vert.glsl" />
+    <None Include="..\resources\screen_frag.glsl" />
+    <None Include="..\resources\screen_vert.glsl" />
     <None Include="..\resources\wall_frag.glsl" />
     <None Include="..\resources\wall_vert.glsl" />
   </ItemGroup>
